charts/kubernetes_yaml/kyverno/add-istio-mesh-ns.cpol.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-istio-mesh-namespace
  annotations:
    policies.kyverno.io/title: Add Istio Dataplane Ambient Mesh
    policies.kyverno.io/category: Istio
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: Namespace
spec:
  rules:
    - name: add-istio-dataplane-ambient
      match:
        any:
          - resources:
              kinds:
                - Namespace
              namespaces:
                - "my*"
                - "app*"
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              istio.io/dataplane-mode: ambient
